--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,11 +3,16 @@
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
+    <string name="prompt_name">Name</string>
     <string name="prompt_username">Username</string>
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign in</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="action_register">Register</string>
+    <string name="action_home">Home</string>
+    <string name="action_search">Search</string>
+    <string name="action_create">Write Tweet</string>
+    <string name="action_nav">Navigator</string>
     <string name="valid_entry">Ok</string>
     <string name="error_empty_field">Field cannot be empty</string>
     <string name="error_invalid_email">This email address is invalid</string>
@@ -111,4 +116,11 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="new_msg">New Message</string>
+    <string name="bio">Your bio</string>
+    <string name="done">Done</string>
+    <string name="profile">Profile</string>
+    <string name="lists">Lists</string>
+    <string name="messages">Direct Messages</string>
 </resources>
+
