--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -141,5 +141,7 @@
     <string name="alert_button_delete_all_participants">From All</string>
     <string name="time_format">%1$s:%2$s</string>
     <string name="send_message">Send Message</string>
+    <string name="action_send">Send</string>
+    <string name="show_more">Show more</string>
 </resources>
 
