fixed some issues

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -143,5 +143,7 @@
     <string name="send_message">Send Message</string>
     <string name="action_send">Send</string>
     <string name="show_more">Show more</string>
+    <string name="search_title">Search</string>
+    <string name="search_hint">Search for users</string>
 </resources>
 
